# server-go/docs/swagger.json
@@ -2692,8 +2692,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/MyPermissionsResponse"
                         }
                     },
                     "400": {
@@ -5443,6 +5442,23 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "MyPermissionsResponse": {
+            "type": "object",
+            "properties": {
+                "permissions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/RoleResponse"
+                    }
                 }
             }
         },
